force-app/main/default/objects/Delivery_Shipment_Integration__c/Delivery_Shipment_Integration__c.object-meta.xml
<CustomObject>
    <description>Tracks a single TMS integration attempt (create or delete) for a Drive Delivery Shipment, including the denormalized JSON payload sent to TMS. Master-Detail child of Drive Delivery Shipment.</description>
    <label>Delivery Shipment Integration</label>
    <nameField>
        <displayFormat>DSI-{00000000}</displayFormat>
        <label>Delivery Shipment Integration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Delivery Shipment Integrations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>