force-app/main/default/objects/Delivery_Shipment_Integration__c/fields/Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Action_Type__c</fullName>
    <inlineHelpText>Whether the Integration Request is for Shipment Creation or Cancellation.</inlineHelpText>
    <label>Action Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CreateShipmentViaInteg</fullName>
            </value>
            <value>
                <fullName>DeleteShipmentViaInteg</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>