force-app/main/default/objects/Delivery_Shipment_Integration__c/fields/CarrierPartnerName__c.field-meta.xml
<CustomField>
    <fullName>CarrierPartnerName__c</fullName>
    <inlineHelpText>Stores value for Shipment Payload JSON.</inlineHelpText>
    <label>CarrierPartnerName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>