force-app/main/default/objects/Delivery_Shipment_Integration__c/fields/CarrierPartnerProfileName__c.field-meta.xml
<CustomField>
    <fullName>CarrierPartnerProfileName__c</fullName>
    <inlineHelpText>Stores value for Shipment Payload JSON.</inlineHelpText>
    <label>CarrierPartnerProfileName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>