force-app/main/default/objects/Delivery_Shipment_Integration__c/fields/ClientFileName__c.field-meta.xml
<CustomField>
    <fullName>ClientFileName__c</fullName>
    <description>Field stores value for Shipment Header Params.</description>
    <label>ClientFileName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>