force-app/main/default/objects/Delivery_Shipment_Integration__c/fields/Content_Type__c.field-meta.xml
<CustomField>
    <fullName>Content_Type__c</fullName>
    <description>Field stores value for Shipment Header Params.</description>
    <label>Content-Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>