force-app/main/default/objects/Delivery_Shipment_Integration__c/fields/CreationEnterpriseName__c.field-meta.xml
<CustomField>
    <fullName>CreationEnterpriseName__c</fullName>
    <inlineHelpText>Stores value for Shipment Payload JSON.</inlineHelpText>
    <label>CreationEnterpriseName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>