force-app/main/default/objects/Delivery_Shipment_Integration__c/fields/CreationOrganizationName__c.field-meta.xml
<CustomField>
    <fullName>CreationOrganizationName__c</fullName>
    <inlineHelpText>Stores value for Shipment Payload JSON.</inlineHelpText>
    <label>CreationOrganizationName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>