force-app/main/default/objects/Delivery_Shipment_Integration__c/fields/CurrentCarrierEnterpriseName__c.field-meta.xml
<CustomField>
    <fullName>CurrentCarrierEnterpriseName__c</fullName>
    <inlineHelpText>Stores value for Shipment Payload JSON.</inlineHelpText>
    <label>CurrentCarrierEnterpriseName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>