force-app/main/default/objects/Delivery_Shipment_Integration__c/fields/CurrentCarrierOrganizationName__c.field-meta.xml
<CustomField>
    <fullName>CurrentCarrierOrganizationName__c</fullName>
    <inlineHelpText>Stores value for Shipment Payload JSON.</inlineHelpText>
    <label>CurrentCarrierOrganizationName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>