force-app/main/default/objects/Delivery_Shipment_Integration__c/fields/CustomerOrderRef__c.field-meta.xml
<CustomField>
    <fullName>CustomerOrderRef__c</fullName>
    <inlineHelpText>Stores value for Shipment Payload JSON.</inlineHelpText>
    <label>CustomerOrderRef</label>
    <length>255</length>
    <type>Text</type>
</CustomField>