force-app/main/default/objects/Delivery_Shipment_Integration__c/fields/Debug_Log__c.field-meta.xml
<CustomField>
    <fullName>Debug_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Related Debug Log to track API call details.</inlineHelpText>
    <label>Debug Log</label>
    <referenceTo>sked__Debug_Log__c</referenceTo>
    <relationshipLabel>Delivery Shipment Integrations</relationshipLabel>
    <relationshipName>Delivery_Shipment_Integrations</relationshipName>
    <type>Lookup</type>
</CustomField>