force-app/main/default/objects/Delivery_Shipment_Integration__c/fields/DeliveryDateRangeEnd__c.field-meta.xml
<CustomField>
    <fullName>DeliveryDateRangeEnd__c</fullName>
    <inlineHelpText>Stores value for Shipment Payload JSON.</inlineHelpText>
    <label>DeliveryDateRangeEnd</label>
    <length>255</length>
    <type>Text</type>
</CustomField>