force-app/main/default/objects/Delivery_Shipment_Integration__c/fields/DeliveryDateRangeStart__c.field-meta.xml
<CustomField>
    <fullName>DeliveryDateRangeStart__c</fullName>
    <inlineHelpText>Stores value for Shipment Payload JSON.</inlineHelpText>
    <label>DeliveryDateRangeStart</label>
    <length>255</length>
    <type>Text</type>
</CustomField>