force-app/main/default/objects/Delivery_Shipment_Integration__c/fields/Drive_Delivery_Movement__c.field-meta.xml
<CustomField>
    <fullName>Drive_Delivery_Movement__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Movement related to this Shipment Integration.</inlineHelpText>
    <label>Drive Delivery Movement</label>
    <referenceTo>Drive_Delivery_Movement__c</referenceTo>
    <relationshipLabel>Delivery Shipment Integrations</relationshipLabel>
    <relationshipName>Delivery_Shipment_Integrations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>