force-app/main/default/objects/Delivery_Shipment_Integration__c/fields/Drive_Delivery_Shipment__c.field-meta.xml
<CustomField>
    <fullName>Drive_Delivery_Shipment__c</fullName>
    <label>Drive Delivery Shipment</label>
    <referenceTo>Drive_Delivery_Shipment__c</referenceTo>
    <relationshipLabel>Delivery Shipment Integrations</relationshipLabel>
    <relationshipName>Delivery_Shipment_Integrations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>