force-app/main/default/objects/Delivery_Shipment_Integration__c/fields/EquipmentType__c.field-meta.xml
<CustomField>
    <fullName>EquipmentType__c</fullName>
    <inlineHelpText>Stores value for Shipment Payload JSON.</inlineHelpText>
    <label>EquipmentType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>