force-app/main/default/objects/Delivery_Shipment_Integration__c/fields/FreightControlledBySystem__c.field-meta.xml
<CustomField>
    <fullName>FreightControlledBySystem__c</fullName>
    <inlineHelpText>Stores value for Shipment Payload JSON.</inlineHelpText>
    <label>FreightControlledBySystem</label>
    <length>255</length>
    <type>Text</type>
</CustomField>