force-app/main/default/objects/Delivery_Shipment_Integration__c/fields/FreightTerms__c.field-meta.xml
<CustomField>
    <fullName>FreightTerms__c</fullName>
    <inlineHelpText>Stores value for Shipment Payload JSON.</inlineHelpText>
    <label>FreightTerms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>