force-app/main/default/objects/Delivery_Shipment_Integration__c/fields/InboundInterfaceVersion__c.field-meta.xml
<CustomField>
    <fullName>InboundInterfaceVersion__c</fullName>
    <description>Field stores value for Shipment Header Params.</description>
    <label>InboundInterfaceVersion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>