force-app/main/default/objects/Delivery_Shipment_Integration__c/fields/InboundQueueEnterpriseName__c.field-meta.xml
<CustomField>
    <fullName>InboundQueueEnterpriseName__c</fullName>
    <description>Field stores value for Shipment Header Params.</description>
    <label>InboundQueueEnterpriseName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>