force-app/main/default/objects/Delivery_Shipment_Integration__c/fields/ItemDescription__c.field-meta.xml
<CustomField>
    <fullName>ItemDescription__c</fullName>
    <inlineHelpText>Stores value for Shipment Payload JSON.</inlineHelpText>
    <label>ItemDescription</label>
    <length>255</length>
    <type>Text</type>
</CustomField>