force-app/main/default/objects/Delivery_Shipment_Integration__c/fields/ItemName__c.field-meta.xml
<CustomField>
    <fullName>ItemName__c</fullName>
    <inlineHelpText>Stores value for Shipment Payload JSON.</inlineHelpText>
    <label>ItemName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>