force-app/main/default/objects/Delivery_Shipment_Integration__c/fields/LoadType__c.field-meta.xml
<CustomField>
    <fullName>LoadType__c</fullName>
    <inlineHelpText>Stores value for Shipment Payload JSON.</inlineHelpText>
    <label>LoadType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>