force-app/main/default/objects/Delivery_Shipment_Integration__c/fields/Movement_Number__c.field-meta.xml
<CustomField>
    <fullName>Movement_Number__c</fullName>
    <inlineHelpText>Stores value for Shipment Payload JSON.</inlineHelpText>
    <label>Movement Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>