force-app/main/default/objects/Delivery_Shipment_Integration__c/fields/NonCataloguedItemName__c.field-meta.xml
<CustomField>
    <fullName>NonCataloguedItemName__c</fullName>
    <inlineHelpText>Stores value for Shipment Payload JSON.</inlineHelpText>
    <label>NonCataloguedItemName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>