force-app/main/default/objects/Delivery_Shipment_Integration__c/fields/OrderRefNumber__c.field-meta.xml
<CustomField>
    <fullName>OrderRefNumber__c</fullName>
    <inlineHelpText>Stores value for Shipment Payload JSON.</inlineHelpText>
    <label>OrderRefNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>