force-app/main/default/objects/Delivery_Shipment_Integration__c/fields/PickupDateRangeEnd__c.field-meta.xml
<CustomField>
    <fullName>PickupDateRangeEnd__c</fullName>
    <inlineHelpText>Stores value for Shipment Payload JSON.</inlineHelpText>
    <label>PickupDateRangeEnd</label>
    <length>255</length>
    <type>Text</type>
</CustomField>