force-app/main/default/objects/Delivery_Shipment_Integration__c/fields/PickupDateRangeStart__c.field-meta.xml
<CustomField>
    <fullName>PickupDateRangeStart__c</fullName>
    <inlineHelpText>Stores value for Shipment Payload JSON.</inlineHelpText>
    <label>PickupDateRangeStart</label>
    <length>255</length>
    <type>Text</type>
</CustomField>