force-app/main/default/objects/Delivery_Shipment_Integration__c/fields/QuantityUnitOfMeasure__c.field-meta.xml
<CustomField>
    <fullName>QuantityUnitOfMeasure__c</fullName>
    <inlineHelpText>Stores value for Shipment Payload JSON.</inlineHelpText>
    <label>QuantityUnitOfMeasure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>