force-app/main/default/objects/Delivery_Shipment_Integration__c/fields/Retry_Count__c.field-meta.xml
<CustomField>
    <fullName>Retry_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Count of retries for submission.</inlineHelpText>
    <label>Retry Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>