force-app/main/default/objects/Delivery_Shipment_Integration__c/fields/ServiceLevel__c.field-meta.xml
<CustomField>
    <fullName>ServiceLevel__c</fullName>
    <inlineHelpText>Stores value for Shipment Payload JSON.</inlineHelpText>
    <label>ServiceLevel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>