force-app/main/default/objects/Delivery_Shipment_Integration__c/fields/ShipFromEnterpriseName__c.field-meta.xml
<CustomField>
    <fullName>ShipFromEnterpriseName__c</fullName>
    <inlineHelpText>Stores value for Shipment Payload JSON.</inlineHelpText>
    <label>ShipFromEnterpriseName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>