force-app/main/default/objects/Delivery_Shipment_Integration__c/fields/ShipFromOrganizationName__c.field-meta.xml
<CustomField>
    <fullName>ShipFromOrganizationName__c</fullName>
    <inlineHelpText>Stores value for Shipment Payload JSON.</inlineHelpText>
    <label>ShipFromOrganizationName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>