force-app/main/default/objects/Delivery_Shipment_Integration__c/fields/ShipFromPartnerSiteAlias__c.field-meta.xml
<CustomField>
    <fullName>ShipFromPartnerSiteAlias__c</fullName>
    <inlineHelpText>Stores value for Shipment Payload JSON.</inlineHelpText>
    <label>ShipFromPartnerSiteAlias</label>
    <length>255</length>
    <type>Text</type>
</CustomField>