force-app/main/default/objects/Delivery_Shipment_Integration__c/fields/ShipFromSiteName__c.field-meta.xml
<CustomField>
    <fullName>ShipFromSiteName__c</fullName>
    <inlineHelpText>Stores value for Shipment Payload JSON.</inlineHelpText>
    <label>ShipFromSiteName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>