force-app/main/default/objects/Delivery_Shipment_Integration__c/fields/ShipmentLine_QuantityUnitOfMeasure2__c.field-meta.xml
<CustomField>
    <fullName>ShipmentLine_QuantityUnitOfMeasure2__c</fullName>
    <inlineHelpText>Stores value for Shipment Payload JSON.</inlineHelpText>
    <label>ShipmentLine QuantityUnitOfMeasure2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>