force-app/main/default/objects/Delivery_Shipment_Integration__c/fields/ShipmentLineNumber__c.field-meta.xml
<CustomField>
    <fullName>ShipmentLineNumber__c</fullName>
    <inlineHelpText>Stores value for Shipment Payload JSON.</inlineHelpText>
    <label>ShipmentLineNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>