force-app/main/default/objects/Delivery_Shipment_Integration__c/fields/ShipmentNumber__c.field-meta.xml
<CustomField>
    <fullName>ShipmentNumber__c</fullName>
    <inlineHelpText>Stores value for Shipment Payload JSON.</inlineHelpText>
    <label>ShipmentNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>