force-app/main/default/objects/Delivery_Shipment_Integration__c/fields/ShipmentType__c.field-meta.xml
<CustomField>
    <fullName>ShipmentType__c</fullName>
    <inlineHelpText>Stores value for Shipment Payload JSON.</inlineHelpText>
    <label>ShipmentType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>