force-app/main/default/objects/Delivery_Shipment_Integration__c/fields/ShippedQuantity__c.field-meta.xml
<CustomField>
    <fullName>ShippedQuantity__c</fullName>
    <inlineHelpText>Stores value for Shipment Payload JSON.</inlineHelpText>
    <label>ShippedQuantity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>