force-app/main/default/objects/Delivery_Shipment_Integration__c/fields/ShipToEnterpriseName__c.field-meta.xml
<CustomField>
    <fullName>ShipToEnterpriseName__c</fullName>
    <inlineHelpText>Stores value for Shipment Payload JSON.</inlineHelpText>
    <label>ShipToEnterpriseName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>