force-app/main/default/objects/Delivery_Shipment_Integration__c/fields/ShipToOrganizationName__c.field-meta.xml
<CustomField>
    <fullName>ShipToOrganizationName__c</fullName>
    <inlineHelpText>Stores value for Shipment Payload JSON.</inlineHelpText>
    <label>ShipToOrganizationName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>