force-app/main/default/objects/Delivery_Shipment_Integration__c/fields/ShipToPartnerSiteAlias__c.field-meta.xml
<CustomField>
    <fullName>ShipToPartnerSiteAlias__c</fullName>
    <inlineHelpText>Stores value for Shipment Payload JSON.</inlineHelpText>
    <label>ShipToPartnerSiteAlias</label>
    <length>255</length>
    <type>Text</type>
</CustomField>