force-app/main/default/objects/Delivery_Shipment_Integration__c/fields/ShipToSiteName__c.field-meta.xml
<CustomField>
    <fullName>ShipToSiteName__c</fullName>
    <inlineHelpText>Stores value for Shipment Payload JSON.</inlineHelpText>
    <label>ShipToSiteName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>