force-app/main/default/objects/Delivery_Shipment_Integration__c/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <inlineHelpText>Stores value for Shipment Payload JSON.</inlineHelpText>
    <label>Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>