force-app/main/default/objects/Delivery_Shipment_Integration__c/fields/Special_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Special_Instructions__c</fullName>
    <inlineHelpText>Stores value for Shipment Payload JSON.</inlineHelpText>
    <label>Special Instructions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>