force-app/main/default/objects/Delivery_Shipment_Integration__c/fields/TempShipFromCity__c.field-meta.xml
<CustomField>
    <fullName>TempShipFromCity__c</fullName>
    <inlineHelpText>Stores value for Shipment Payload JSON.</inlineHelpText>
    <label>TempShipFromCity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>