force-app/main/default/objects/Delivery_Shipment_Integration__c/fields/TempShipFromCountry__c.field-meta.xml
<CustomField>
    <fullName>TempShipFromCountry__c</fullName>
    <inlineHelpText>Stores value for Shipment Payload JSON.</inlineHelpText>
    <label>TempShipFromCountry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>