force-app/main/default/objects/Delivery_Shipment_Integration__c/fields/TempShipFromEnterpriseName__c.field-meta.xml
<CustomField>
    <fullName>TempShipFromEnterpriseName__c</fullName>
    <inlineHelpText>Stores value for Shipment Payload JSON.</inlineHelpText>
    <label>TempShipFromEnterpriseName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>