force-app/main/default/objects/Delivery_Shipment_Integration__c/fields/TempShipFromOrganizationName__c.field-meta.xml
<CustomField>
    <fullName>TempShipFromOrganizationName__c</fullName>
    <inlineHelpText>Stores value for Shipment Payload JSON.</inlineHelpText>
    <label>TempShipFromOrganizationName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>