force-app/main/default/objects/Delivery_Shipment_Integration__c/fields/TempShipFromPostalCode__c.field-meta.xml
<CustomField>
    <fullName>TempShipFromPostalCode__c</fullName>
    <inlineHelpText>Stores value for Shipment Payload JSON.</inlineHelpText>
    <label>TempShipFromPostalCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>