force-app/main/default/objects/Delivery_Shipment_Integration__c/fields/TempShipFromSiteName__c.field-meta.xml
<CustomField>
    <fullName>TempShipFromSiteName__c</fullName>
    <inlineHelpText>Stores value for Shipment Payload JSON.</inlineHelpText>
    <label>TempShipFromSiteName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>