force-app/main/default/objects/Delivery_Shipment_Integration__c/fields/TempShipFromState__c.field-meta.xml
<CustomField>
    <fullName>TempShipFromState__c</fullName>
    <inlineHelpText>Stores value for Shipment Payload JSON.</inlineHelpText>
    <label>TempShipFromState</label>
    <length>255</length>
    <type>Text</type>
</CustomField>