force-app/main/default/objects/Delivery_Shipment_Integration__c/fields/TempShipFromStreet1__c.field-meta.xml
<CustomField>
    <fullName>TempShipFromStreet1__c</fullName>
    <inlineHelpText>Stores value for Shipment Payload JSON.</inlineHelpText>
    <label>TempShipFromStreet1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>