force-app/main/default/objects/Delivery_Shipment_Integration__c/fields/TempShipFromStreet2__c.field-meta.xml
<CustomField>
    <fullName>TempShipFromStreet2__c</fullName>
    <inlineHelpText>Stores value for Shipment Payload JSON.</inlineHelpText>
    <label>TempShipFromStreet2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>