force-app/main/default/objects/Delivery_Shipment_Integration__c/fields/TempShipToCity__c.field-meta.xml
<CustomField>
    <fullName>TempShipToCity__c</fullName>
    <inlineHelpText>Stores value for Shipment Payload JSON.</inlineHelpText>
    <label>TempShipToCity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>