force-app/main/default/objects/Delivery_Shipment_Integration__c/fields/TempShipToCountry__c.field-meta.xml
<CustomField>
    <fullName>TempShipToCountry__c</fullName>
    <inlineHelpText>Stores value for Shipment Payload JSON.</inlineHelpText>
    <label>TempShipToCountry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>