force-app/main/default/objects/Delivery_Shipment_Integration__c/fields/TempShipToEnterpriseName__c.field-meta.xml
<CustomField>
    <fullName>TempShipToEnterpriseName__c</fullName>
    <inlineHelpText>Stores value for Shipment Payload JSON.</inlineHelpText>
    <label>TempShipToEnterpriseName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>