force-app/main/default/objects/Delivery_Shipment_Integration__c/fields/TempShipToOrganizationName__c.field-meta.xml
<CustomField>
    <fullName>TempShipToOrganizationName__c</fullName>
    <inlineHelpText>Stores value for Shipment Payload JSON.</inlineHelpText>
    <label>TempShipToOrganizationName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>