force-app/main/default/objects/Delivery_Shipment_Integration__c/fields/TempShipToPostalCode__c.field-meta.xml
<CustomField>
    <fullName>TempShipToPostalCode__c</fullName>
    <inlineHelpText>Stores value for Shipment Payload JSON.</inlineHelpText>
    <label>TempShipToPostalCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>