force-app/main/default/objects/Delivery_Shipment_Integration__c/fields/TempShipToSiteName__c.field-meta.xml
<CustomField>
    <fullName>TempShipToSiteName__c</fullName>
    <inlineHelpText>Stores value for Shipment Payload JSON.</inlineHelpText>
    <label>TempShipToSiteName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>