force-app/main/default/objects/Delivery_Shipment_Integration__c/fields/TempShipToState__c.field-meta.xml
<CustomField>
    <fullName>TempShipToState__c</fullName>
    <inlineHelpText>Stores value for Shipment Payload JSON.</inlineHelpText>
    <label>TempShipToState</label>
    <length>255</length>
    <type>Text</type>
</CustomField>