force-app/main/default/objects/Delivery_Shipment_Integration__c/fields/TempShipToStreet1__c.field-meta.xml
<CustomField>
    <fullName>TempShipToStreet1__c</fullName>
    <inlineHelpText>Stores value for Shipment Payload JSON.</inlineHelpText>
    <label>TempShipToStreet1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>