force-app/main/default/objects/Delivery_Shipment_Integration__c/fields/TempShipToStreet2__c.field-meta.xml
<CustomField>
    <fullName>TempShipToStreet2__c</fullName>
    <inlineHelpText>Stores value for Shipment Payload JSON.</inlineHelpText>
    <label>TempShipToStreet2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>