force-app/main/default/objects/Delivery_Shipment_Integration__c/fields/Transmission_Date__c.field-meta.xml
<CustomField>
    <fullName>Transmission_Date__c</fullName>
    <inlineHelpText>Date on which transmission was attempted (initial attempt or last retry).</inlineHelpText>
    <label>Transmission Date</label>
    <type>Date</type>
</CustomField>