force-app/main/default/objects/Delivery_Shipment_Integration__c/fields/TransmissionId__c.field-meta.xml
<CustomField>
    <fullName>TransmissionId__c</fullName>
    <description>Field stores value for Shipment Header Params. Needs to be unique for a Transmission Request</description>
    <label>TransmissionId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>